[gd_scene load_steps=25 format=3 uid="uid://myvsxwydumrn"]

[ext_resource type="Texture2D" uid="uid://chevdw52lcf04" path="res://client/assets/backgrounds/rock_bg.jpg" id="1_8l4op"]
[ext_resource type="Script" uid="uid://bori47il5bpkl" path="res://client/team_editor/team_editor.gd" id="2_3jt0u"]
[ext_resource type="Texture2D" uid="uid://0rslbu47ytjt" path="res://client/assets/fossil_rocks/giant_fossil_rock_2.png" id="3_rc424"]
[ext_resource type="Script" uid="uid://cytru414x0cqp" path="res://client/team_editor/fossilary_container.gd" id="4_hhllu"]
[ext_resource type="PackedScene" uid="uid://twprmxgwv8kw" path="res://client/common/vivosaur_summary/VivosaurSummary.tscn" id="5_de5v4"]
[ext_resource type="Script" uid="uid://dy3irhtipbde7" path="res://client/team_editor/team_name.gd" id="6_ddgwi"]
[ext_resource type="Script" uid="uid://c6s5x8olm8aid" path="res://client/team_editor/save_team_btn.gd" id="7_ady3e"]
[ext_resource type="Theme" uid="uid://qw3ckwy7bak5" path="res://client/theme/ui_theme.tres" id="8_emnmx"]
[ext_resource type="Script" uid="uid://i0tyv84emqjl" path="res://client/team_editor/back.gd" id="9_6uyc6"]
[ext_resource type="Texture2D" uid="uid://d3rw1bcnrd1c8" path="res://client/assets/Formation_slots.png" id="10_8tvrq"]
[ext_resource type="Script" uid="uid://xfx5lcwa1nij" path="res://client/team_editor/team_slots.gd" id="11_wq38d"]
[ext_resource type="Texture2D" uid="uid://dyvy3f6afttu2" path="res://client/assets/hud/selectable.png" id="12_voi4i"]
[ext_resource type="Script" uid="uid://c4w12c8kp8bc1" path="res://client/team_editor/slot.gd" id="13_kdsjb"]
[ext_resource type="Script" uid="uid://u8dgeae1se4v" path="res://client/team_editor/context_menu.gd" id="14_djknn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wfc57"]
atlas = ExtResource("12_voi4i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbraw"]
atlas = ExtResource("12_voi4i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6odcm"]
atlas = ExtResource("12_voi4i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk5ds"]
atlas = ExtResource("12_voi4i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qmpqq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfc57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbraw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6odcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk5ds")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kcpo7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfc57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbraw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6odcm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qk5ds"]

[node name="TeamEditor" type="TextureRect"]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_8l4op")
expand_mode = 3
script = ExtResource("2_3jt0u")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 251.0
offset_right = 1078.2
offset_bottom = 1076.6
texture = ExtResource("3_rc424")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 177.0
offset_top = 147.0
offset_right = 927.0
offset_bottom = 647.0

[node name="FossilaryContainer" type="HFlowContainer" parent="TextureRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_hhllu")

[node name="VivosaurSummary" parent="." instance=ExtResource("5_de5v4")]
visible = false
layout_mode = 0
offset_left = 1222.0
offset_top = 308.0
offset_right = 1822.0
offset_bottom = 1028.0

[node name="TeamNameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1440.0
offset_top = 62.0
offset_right = 1840.0
offset_bottom = 112.0
placeholder_text = "Team name"
caret_blink = true
script = ExtResource("6_ddgwi")

[node name="SaveTeamBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1430.0
offset_top = 141.0
offset_right = 1635.0
offset_bottom = 188.0
disabled = true
text = "Save team"
script = ExtResource("7_ady3e")

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 67.0
offset_right = 181.0
offset_bottom = 108.0
theme = ExtResource("8_emnmx")
text = "Back"
script = ExtResource("9_6uyc6")

[node name="TeamSlots" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 62.0
offset_right = 1213.0
offset_bottom = 167.0
size_flags_horizontal = 3
texture = ExtResource("10_8tvrq")
expand_mode = 3
script = ExtResource("11_wq38d")

[node name="AZ" type="AnimatedSprite2D" parent="TeamSlots"]
visible = false
position = Vector2(21.999998, 4.9999995)
scale = Vector2(2.8, 2.8)
sprite_frames = SubResource("SpriteFrames_qmpqq")
speed_scale = 2.0
centered = false
script = ExtResource("13_kdsjb")

[node name="Button" type="Button" parent="TeamSlots/AZ"]
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kcpo7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wfc57")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tbraw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6odcm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qk5ds")

[node name="SZ1" type="AnimatedSprite2D" parent="TeamSlots"]
visible = false
position = Vector2(125.99999, 4.9999995)
scale = Vector2(2.8, 2.8)
sprite_frames = SubResource("SpriteFrames_qmpqq")
speed_scale = 2.0
centered = false
script = ExtResource("13_kdsjb")

[node name="Button" type="Button" parent="TeamSlots/SZ1"]
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kcpo7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wfc57")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tbraw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6odcm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qk5ds")

[node name="SZ2" type="AnimatedSprite2D" parent="TeamSlots"]
visible = false
position = Vector2(219.99998, 4.9999995)
scale = Vector2(2.8, 2.8)
sprite_frames = SubResource("SpriteFrames_qmpqq")
speed_scale = 2.0
centered = false
script = ExtResource("13_kdsjb")

[node name="Button" type="Button" parent="TeamSlots/SZ2"]
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kcpo7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wfc57")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tbraw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6odcm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qk5ds")

[node name="Extra1" type="AnimatedSprite2D" parent="TeamSlots"]
visible = false
position = Vector2(333.99997, 4.9999995)
scale = Vector2(2.8, 2.8)
sprite_frames = SubResource("SpriteFrames_qmpqq")
speed_scale = 2.0
centered = false
script = ExtResource("13_kdsjb")

[node name="Button" type="Button" parent="TeamSlots/Extra1"]
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kcpo7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wfc57")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tbraw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6odcm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qk5ds")

[node name="Extra2" type="AnimatedSprite2D" parent="TeamSlots"]
visible = false
position = Vector2(420.99997, 4.9999995)
scale = Vector2(2.8, 2.8)
sprite_frames = SubResource("SpriteFrames_qmpqq")
frame_progress = 0.19100167
speed_scale = 2.0
centered = false
script = ExtResource("13_kdsjb")

[node name="Button" type="Button" parent="TeamSlots/Extra2"]
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kcpo7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wfc57")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tbraw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6odcm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qk5ds")

[node name="ContextMenu" type="PopupMenu" parent="."]
script = ExtResource("14_djknn")

[connection signal="sort_children" from="TextureRect/ScrollContainer/FossilaryContainer" to="." method="_position_team_medals"]
[connection signal="text_changed" from="TeamNameInput" to="TeamNameInput" method="_on_text_changed"]
[connection signal="pressed" from="SaveTeamBtn" to="SaveTeamBtn" method="_on_pressed"]
[connection signal="pressed" from="BackBtn" to="BackBtn" method="_on_pressed"]
[connection signal="team_modified" from="TeamSlots" to="SaveTeamBtn" method="_on_team_modified"]
[connection signal="team_slots_loaded" from="TeamSlots" to="TextureRect/ScrollContainer/FossilaryContainer" method="_on_team_slots_loaded"]
[connection signal="id_pressed" from="ContextMenu" to="ContextMenu" method="_on_id_pressed"]
